Issue #LISSA-53: Reduced form whitespace.

--- a/themes/lissa_bluedrop/css/components/timeline.css
+++ b/themes/lissa_bluedrop/css/components/timeline.css
@@ -1,6 +1,6 @@
 .notification-timeline-notification-form,
 .page-node-timeline .notification-entity-form {
-  padding: 3em;
+  padding: 1.5em 3em;
   border-radius: .5em;
   background: #D8E5F0;
   margin-bottom: 2em;
